feat: send notification email API
