# backend/src/routes/dashboard.ts
@@ -1,5 +1,9 @@
 import { Router } from 'express';
-import { getTodayReview, markDone } from '../controllers/dashboardController';
+import {
+  getTodayReview,
+  markDone,
+  sendTodayReviewEmail,
+} from '../controllers/dashboardController';
 import { authenticate } from '../middleware/auth';
 
 const router = Router();
@@ -8,6 +12,7 @@ router.use(authenticate);
 
 router.get('/today', getTodayReview);
 router.post('/mark-done', markDone);
+router.post('/todayemail', sendTodayReviewEmail);
 
 export default router;
 
